--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,140 @@
-
 @import './base.css';
+@import url('https://fonts.googleapis.com/css2?family=Borel&family=Caprasimo&family=DM+Sans:opsz@9..40&family=Shrikhand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Figtree:wght@300;400&display=swap');
 
-#app {
+body {
+  background: linear-gradient(135deg, rgb(243, 198, 255) , rgb(189, 242, 255) , rgb(253, 255, 206));
+}
+
+.font-dm {
+  font-family: 'DM Sans', sans-serif;
+}
+
+.font-borel {
+  font-family: 'Borel', cursive;
+}
+
+.font-cp {
+  font-family: 'Caprasimo', cursive;
+}
+
+.crop {
+  object-fit: cover;
+  width: 200px;
+  height: 200px;
+}
+
+.name {
+  font-size: 40px;
+}
+
+.list {
+  height: 14px;
+}
+
+@media screen and (min-width: 1024px) {
+  .crop {
+    object-fit: cover;
+    width: 300px;
+    height: 300px;
+  }
+
+  .name {
+    font-size: 45px;
+  }
+
+  .detail {
+    font-size: 20px;
+  }
+
+  .list {
+    height: 18px;
+  }
+  
+}
+
+.notfound {
+  height: 180px;
+}
+
+@media screen and (max-width: 768px) {
+  /* Styles for tablets */
+  .crop {
+    width: 150px;
+    height: 150px;
+  }
+
+  .name {
+    font-size: 20px;
+  }
+
+  .course {
+    font-size: 10px;
+  }
+
+  .teacherid {
+    font-size: 13px;
+  }
+  .notfound {
+    height: 100px;
+  }
+
+  /* .list {
+    height: 10px;
+  } */
+  
+}
+
+@media screen and (max-width: 480px) {
+  /* CSS rules for mobile devices */
+  .crop {
+    width: 150px;
+    height: 150px;
+  }
+
+  .name {
+    font-size: 20px;
+  }
+
+  .course {
+    font-size: 10px;
+  }
+
+  .teacherid {
+    font-size: 13px;
+  }
+  .notfound {
+    height: 100px;
+  }
+}
+
+.font-noto {
+  font-family: 'Noto Serif', serif;
+}
+
+.font-fig {
+  font-family: 'Figtree', sans-serif;
+}
+
+@keyframes fadeDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fade-down {
+  animation-name: fadeDown;
+  animation-duration: 0.5s; /* Adjust the duration as needed */
+  animation-fill-mode: both;
+}
+
+/* #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -33,4 +166,4 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-}
+} */
