--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -73,7 +73,7 @@ body {
     font-size: 10px;
   }
 
-  .teacherid {
+  .advisorid {
     font-size: 13px;
   }
   .notfound {
@@ -101,7 +101,7 @@ body {
     font-size: 10px;
   }
 
-  .teacherid {
+  .advisorid {
     font-size: 13px;
   }
   .notfound {
