--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Figtree:wght@300;400&display=swap');
 
 body {
-  background: linear-gradient(135deg,#ffa9f9, #fff7ad  );
+  background: linear-gradient(#91eae4,  #86A8E7 );
 }
 
 .submit-btn{
