--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,6 @@
 @import './base.css';
 
-@import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@300&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@300;800&display=swap');
 
 
 
