--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,5 @@
 @import './base.css';
-
-  @import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@300;800&display=swap');
-
-
+ @import url('https://fonts.googleapis.com/css2?family=Sometype+Mono:wght@700&display=swap');
 
 body {
   background: linear-gradient(#91eae4,  #86A8E7 );
@@ -17,15 +14,15 @@ body {
 }
 
 .font-dm {
-  font-family: 'Playpen Sans', cursive;
+  font-family: 'Sometype Mono', monospace;
 }
 
 .font-borel {
-  font-family: 'Playpen Sans', cursive;
+  font-family: 'Sometype Mono', monospace;
 }
 
 .font-cp {
-  font-family: 'Playpen Sans', cursive;
+  font-family: 'Sometype Mono', monospace;
 }
 
 .crop {
@@ -119,11 +116,11 @@ body {
 }
 
 .font-noto {
-  font-family: 'Playpen Sans', cursive;
+  font-family: 'Sometype Mono', monospace;
 }
 
-.font-fig {
-  font-family: 'Playpen Sans', cursive;
+.font-pri {
+  font-family: 'Sometype Mono', monospace;
 }
 
 @keyframes fadeDown {
